--- a/Proyectos/Clases/package.json
+++ b/Proyectos/Clases/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
+    "mongodb": "^6.1.0",
+    "mongoose": "^7.5.2",
     "multer": "^1.4.5-lts.1",
     "socket.io": "^4.7.2",
     "ws": "^8.13.0"
