--- a/Proyectos/Clases/package.json
+++ b/Proyectos/Clases/package.json
@@ -22,6 +22,7 @@
     "passport-github2": "^0.1.12",
     "passport-local": "^1.0.0",
     "socket.io": "^4.7.2",
+    "swagger-ui-express": "^5.0.0",
     "winston": "^3.11.0",
     "ws": "^8.13.0",
     "yargs": "^17.7.2"
