--- a/Proyectos/Clases/package.json
+++ b/Proyectos/Clases/package.json
@@ -21,6 +21,7 @@
     "passport": "^0.6.0",
     "passport-github2": "^0.1.12",
     "passport-local": "^1.0.0",
+    "railway": "^2.0.17",
     "socket.io": "^4.7.2",
     "swagger-ui-express": "^5.0.0",
     "winston": "^3.11.0",
